--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="pricing-cloumn col-lg-4 col-md-6">
 <div class="card">
   <div class="card-header">
-    <h3>Beginer</h3>
+    <h3>Beginner</h3>
   </div>
   <div class="card-body" >
     <h2>Free</h2>
@@ -206,7 +206,7 @@
 <div class="pricing-cloumn col-lg-4 col-md-6">
 <div class="card">
   <div class="card-header">
-    <h3>Intermedet</h3>
+    <h3>Intermediate</h3>
   </div>
   <div class="card-body" >
     <h2>$49 /mo</h2>
